<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/myCardView"
    android:layout_margin="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/txt_title"/>
        <TextView
            android:id="@+id/txt_episode_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_episode_id"/>
        <TextView
            android:id="@+id/txt_opening_claw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_opening_claw"/>
        <TextView
            android:id="@+id/txt_director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_director"/>
        <TextView
            android:id="@+id/txt_producer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_producer"/>
        <TextView
            android:id="@+id/txt_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_release"
            />
        <TextView
            android:id="@+id/txt_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_species"/>
        <TextView
            android:id="@+id/txt_startships"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_startships"/>
        <TextView
            android:id="@+id/txt_vehicles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_vehicles"/>
        <TextView
            android:id="@+id/txt_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_characters"/>
        <TextView
            android:id="@+id/txt_planets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_planets"/>
        <TextView
            android:id="@+id/txt_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_url"/>
        <TextView
            android:id="@+id/txt_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_created"/>
        <TextView
            android:id="@+id/txt_edited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_edited"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
